se crea las paginas eventos

--- a/eventos/envento2.html
+++ b/eventos/envento2.html
@@ -88,12 +88,11 @@
 
     <div class="titulo">
       <h1 class="text-center">
-        Bolivariano cumple efectivo proceso para evaluación,
-        según evidencia el CACES que brindó una conferencia 
+        Trayectoria académica del Rector del Universitario Bolivariano impulsó su Doctorado Honoris Causa
       </h1>
       <div class="titulo-imagen">
-        <img src="/assets/images/eventos/Caces.png" alt="CACES">
-        <p>“Se aplican cambios y acciones de mejoras en las IES”: Dra. Ximena Vallejo, titular del CACES.</p>
+        <img src="/assets/images/eventos/HonorisCausa.png" alt="HonorisCausa">
+        <!--<p>“Se aplican cambios y acciones de mejoras en las IES”: Dra. Ximena Vallejo, titular del CACES.</p>-->
       </div>
       
     </div>
@@ -101,21 +100,36 @@
     <div class="contenido-evento">
       <p>
         <span>(RESUMEN)</span>
-        La característica participativa fue determinante en el transcurso de la ponencia del CACES, que repasó las técnicas de evaluación bajo responsabilidad de las Instituciones de Educación Superior (IES). La sustentación se inscribe en la visita reciente al Campus del Universitario Bolivariano.
+        Mediante ceremonia especial en República Dominicana, la Universidad del Norte de Tamaulipas de México confirió este destacado título al Rector del Bolivariano por su amplia experiencia en el ámbito de la educación superior y un sólido proceso de internacionalización. 
       </p>
 
       <p>
-        La cultura de la mejora continua resaltó la doctora Ph. D. Ximena Córdova Vallejo, máxima autoridad del Consejo de Aseguramiento de la Calidad de la Educación Superior (CACES), durante su conferencia sobre Procesos de Evaluación y Acreditación en el Sistema de Educación Superior del Ecuador.
-        Su ponencia ante la comunidad académica del Instituto Superior Universitario Bolivariano de la ciudad de Loja se efectuó dentro de la agenda de la Presidencia de ese organismo nacional que se desarrolló el 27 de junio, de manera interactiva en especial con los profesionales en formación y docentes investigadores.
+        El magíster Víctor Hugo Samaniego Luna, rector del Instituto Superior Universitario Bolivariano (ISUB) de Loja recibió el título honorífico Doctorado Honoris Causa de la Universidad del Norte de Tamaulipas (UNT) de México durante un acto solemne.
+        La ceremonia especial se desarrolló el 21 de junio como un reconocimiento a la máxima Autoridad del Universitario Bolivariano junto con otras personalidades, directivos, funcionarios y empresarios del continente América, en la Cancillería de la ciudad Santo Domingo, capital de República Dominicana.
 
-        Respaldo
-        El factor preponderante del apoyo de las Direcciones de las IES a estos programas de autoevaluación y evaluación permitirá incrementar los índices de calidad de la educación superior, argumentó la doctora Ximena Córdova al plantear el caso del Universitario Bolivariano con un efectivo cumplimiento del cronograma establecido.
-        Con la definición de metas claras para el objetivo integral de cada organismo resulta más confiable el trabajo evaluativo permanente y el seguimiento no necesariamente con fines de acreditación por parte de las IES del Ecuador, sino para innovar la excelencia educacional.
+        <span>Méritos</span>
+        En la sede del Ministerio de Administración Pública se anunció el 21 de junio que luego del dictamen de aprobación a cargo del Comité de Evaluación de la UNT y su Claustro Doctoral, se otorgó de manera unánime esta distinción al magíster Víctor Hugo Samaniego por su perfil académico con casi 20 años de gestión y experiencia.
+        El trabajo destacado en los países Bolivarianos y con resultados de excelencia educativa por medio de un proceso de internacionalización y vanguardia le facultó ser un referente en el ámbito regional.
+
+        <span>Galardones</span>
+        El Rector-canciller junto con la delegación del Universitario Bolivariano de Loja, representó a Ecuador, en el transcurso de la programación oficial que organizó la UNT de México, Embajada mexicana, Ministerio de Relaciones Exteriores de República Dominicana, entre otras instituciones gubernamentales del Caribe y Centroamérica. 
+        El título honorífico se suma a los múltiples reconocimientos que ha recibido la primera Autoridad del Bolivariano en el extranjero como: Líder Educacional de Latinoamérica y Líder en Calidad de Educación Superior por parte del International Business Institute, en Roma (Italia), durante agosto de 2023; Líder Educacional y Mejor Empresario, en el transcurso de abril del mismo año, galardón otorgado por Latin American Quality Institute; entre otros premios.
 
       </p>
+      <p>
+        <span>EXTRACTO</span>
+        La UNT de México, basada en su slogan “Educación y Trabajo para la Paz” y después de un riguroso programa de selectividad y méritos, entregó el Doctorado Honoris Causa al magíster Víctor Hugo Samaniego, primera autoridad del Universitario Bolivariano. 
+      </p>
+
       <p>
         <span>MEMORIA</span>
-        El CACES determina los modelos de evaluación que tienen fines de acreditación. La autoevaluación y mejora continua integran estos sistemas aplicados a las IES del Ecuador.
+        Como persona eminente y su ardua labor en el quehacer de las Instituciones de Educación Superior del Ecuador, magíster Víctor Hugo Samaniego afianzó su imagen internacional académica al recibir esta nueva distinción regional.
+
+      </p>
+
+      <p>
+        <span>ENFOQUE</span>
+        25 de junio, a las 10:00, en el Auditorio del Instituto Bolivariano se realizará un acto solemne de adhesión al Rector por su reciente distinción con el título de Doctorado Honoris Causa.
 
       </p>
     </div>
@@ -123,8 +137,23 @@
     <div class="footer-evento">
 
       <div class="titulo-imagen">
-        <img src="/assets/images/eventos/caces1.png" alt="CACES">
-        <p>El accionar del CACES y su labor en la Región Sur fueron reconocidos por el rector del Bolivariano, magíster Víctor Hugo Samaniego Luna.</p>
+        <img src="/assets/images/eventos/HonorisCausaB.png" alt="CACES">
+        <p>La condecoración recibió la máxima Autoridad del Bolivariano en honor a su amplia experiencia académica.</p>
+      </div>
+
+      <div class="titulo-imagen">
+        <img src="/assets/images/eventos/HonorisCausaC.png" alt="CACES">
+        <p>El acto solemne se efectuó en la Cancillería de la ciudad Santo Domingo (República Dominicana).</p>
+      </div>
+
+      <div class="titulo-imagen">
+        <img src="/assets/images/eventos/HonorisCausaD.png" alt="CACES">
+        <p>La distinción de la UNT constituye otro galardón internacional que recibe el magíster Víctor Hugo Samaniego, rector del Bolivariano.</p>
+      </div>
+
+      <div class="titulo-imagen">
+        <img src="/assets/images/eventos/HonorisCausaE.png" alt="CACES">
+        <p>El grupo multidisciplinario estuvo integrado por destacadas personalidades de América.</p>
       </div>
       
     </div>
