--- a/oferta-academica.html
+++ b/oferta-academica.html
@@ -54,7 +54,7 @@
             <li><a href="/carreras/diplomados/adultomayor.html">Gestión de Proyectos</a></li>   
           </ul>
         </li>
-        <li><a href="matriculate-online.html">MATRICULATE ONLINE</a></li>
+        <li><a href="matriculate-online.php">MATRICULATE ONLINE</a></li>
         
       </nav>
       
