se cambia el enlace al modulo de php

--- a/carreras/diplomados/adultomayor.html
+++ b/carreras/diplomados/adultomayor.html
@@ -85,7 +85,7 @@
             <li><a href="/carreras/diplomados/gestion-proyectos.html">Gestión de Proyectos</a></li>  
           </ul>
         </li>
-        <li><a href="/matriculate-online.php">Matriculate Online</a></li>
+        <li><a href="http://localhost/iubonline/matriculate-online.php" target="_blank">MATRICULATE ONLINE</a></li>
       </ul>  
     </div>
 
