--- a/carreras/diplomados/cuidadospacientecritico.html
+++ b/carreras/diplomados/cuidadospacientecritico.html
@@ -54,7 +54,7 @@
             <li><a href="/carreras/diplomados/gestion-proyectos.html">Gestión de Proyectos</a></li>   
           </ul>
         </li>
-        <li><a href="/matriculate-online.php">MATRICULATE ONLINE</a></li>
+        <li><a href="http://localhost/iubonline/matriculate-online.php" target="_blank">MATRICULATE ONLINE</a></li>
         
       </nav>
       
