--- a/eventos/envento2.html
+++ b/eventos/envento2.html
@@ -77,7 +77,7 @@
           </ul>
         </li>
         <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
-        <a href="/matriculate-online.php">MATRICULATE ONLINE</a>
+        <a href="http://localhost/iubonline/matriculate-online.php" target="_blank">MATRICULATE ONLINE</a>
         <a href="/metodologia-estudio.html">METODOLOGIA DE ESTUDIO</a>
         <a href="https://bolivarianovirtual.com/login/index.php" target="_blank">BOLIVARIANO DIGITAL EDUCA</a>
       </ul>  
