--- a/carreras/maestrias/tecnologia.html
+++ b/carreras/maestrias/tecnologia.html
@@ -54,7 +54,7 @@
             <li><a href="/carreras/diplomados/adultomayor.html">Gestión de Proyectos</a></li>   
           </ul>
         </li>
-        <li><a href="/matriculate-online.html">MATRICULATE ONLINE</a></li>
+        <li><a href="http://localhost/iubonline/matriculate-online.php" target="_blank">MATRICULATE ONLINE</a></li>
         
       </nav>
       
