se registra los enlaces a los eventos

--- a/index.html
+++ b/index.html
@@ -203,13 +203,13 @@
           <h3>Bolivariano cumple efectivo proceso para evaluación,
             según evidencia el CACES que brindó una conferencia 
           </h3>
-          <p><a href="#">leer Mas...</a></p>
+          <p><a href="/eventos/envento1.html">leer Mas...</a></p>
         </div>
 
         <div class="tarjeta-evento">
           <img src="/assets/images/eventos/HonorisCausa.png" alt="Honoris">
           <h3>Trayectoria académica del Rector del Universitario Bolivariano impulsó su Doctorado Honoris Causa</h3>
-          <p><a href="#">leer Mas...</a></p>
+          <p><a href="/eventos/envento2.html">leer Mas...</a></p>
         </div>
 
         <div class="tarjeta-evento">
