--- a/eventos/envento1.html
+++ b/eventos/envento1.html
@@ -36,7 +36,7 @@
     <div class="menu">
       
       <nav class="sub-menu text-center contenedor navbar">
-        <a href="index.html"><img src="/assets/images/home.png" alt="iconoInicio"></a>
+        <a href="/index.html"><img src="/assets/images/home.png" alt="iconoInicio"></a>
         <li class="dropdown"><a href="/admisiones-iub.html">ADMISIONES<i class="bi bi-chevron-down"></i></a>
           <ul> 
             <li><a href="/oferta-academica.html">PREGRADO</a></li> 
