Se repara unos errores, y se verifica el modulo de matriculate online

--- a/carreras/diplomados/gestion-proyectos.html
+++ b/carreras/diplomados/gestion-proyectos.html
@@ -72,8 +72,8 @@
             <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
             <li><a href="/carreras/maestrias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
             <li><a href="/carreras/maestrias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
-            <li><a href="/carreras/maestrias/contabilidad.html">Tecnología Superior Universitaria en Contabilidad </a></li>
-            <li><a href="/formacion-continua.html">Administración de Empresas e Inteligencia de Negocios</a></li>   
+            <li><a href="/carreras/maestrias/calidadProductividad.html">Tecnología Superior en Calidad y Productividad</a></li>
+            <li><a href="formacioncontinua.html">Tecnología Superior Universitaria en Contabilidad</a></li>  
           </ul>
         </li>
         <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
@@ -195,8 +195,14 @@
     </div>
   </div>
 
-  <div class="boton-informacion contenedor">
-    <a href="/carreras/diplomados/documento/2 CUIDADOS EN ENFERMERIA EN PACIENRE CRITICO copia.pdf">MALLA</a>
+  <div class="btn-malla_fin">
+    <div class="boton-informacion contenedor">
+      <a href="/carreras/diplomados/documento/3 Diplomado en Gestión de Proyectos" target="_blank">MALLA</a>
+    </div>
+  
+    <div class="boton-fin contenedor">
+      <a href="/assets/images/img-carreras/costoDiplomado.png" target="_blank">FINANCIAMIENTO</a>
+    </div>
   </div>
   
   <div class="banner-adm">
