--- a/carreras/maestrias/contabilidad.html
+++ b/carreras/maestrias/contabilidad.html
@@ -203,10 +203,15 @@
     </div>
   </div>
 
-    <div class="btn-tecnologia">
-      <button>MALLA</button><!--<li><a href="#">MALLA</a></li>-->
-      <button>INVERSIÓN</button><!--<li><a href="#">INVERSIÓN</a></li>-->
+  <div class="btn-malla_fin">
+    <div class="boton-informacion contenedor">
+      <a href="/assets/images/img-carreras/mallaCurricular.png" target="_blank">MALLA</a>
     </div>
+  
+    <div class="boton-fin contenedor">
+      <a href="/assets/images/img-carreras/costoPregrado.png" target="_blank">FINANCIAMIENTO</a>
+    </div>
+  </div>
   
   <footer class="footer-adm">
     <div class="direccion">
