--- a/carreras/maestrias/tecnologia.html
+++ b/carreras/maestrias/tecnologia.html
@@ -42,8 +42,8 @@
             <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
             <li><a href="/carreras/maestrias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
             <li><a href="/carreras/maestrias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
-            <li><a href="/carreras/maestrias/contabilidad.html">Tecnología Superior Universitaria en Contabilidad </a></li>
-            <li><a href="formacioncontinua.html">Administración de Empresas e Inteligencia de Negocios</a></li>   
+            <li><a href="/carreras/maestrias/calidadProductividad.html">Tecnología Superior en Calidad y Productividad</a></li>
+            <li><a href="formacioncontinua.html">Tecnología Superior Universitaria en Contabilidad</a></li>    
           </ul>
         </li>
         <li class="dropdown"><a href="/formacion-continua.html">FORMACIÓN CONTINUA<i class="bi bi-chevron-down"></i></a>
@@ -200,10 +200,15 @@
     </div>
   </div>
 
-    <div class="btn-tecnologia">
-      <button>MALLA</button><!--<li><a href="#">MALLA</a></li>-->
-      <button>INVERSIÓN</button><!--<li><a href="#">INVERSIÓN</a></li>-->
+  <div class="btn-malla_fin">
+    <div class="boton-informacion contenedor">
+      <a href="/assets/images/img-carreras/mallaCurricular.png" target="_blank">MALLA</a>
     </div>
+  
+    <div class="boton-fin contenedor">
+      <a href="/assets/images/img-carreras/costoPregrado.png" target="_blank">FINANCIAMIENTO</a>
+    </div>
+  </div>
   
   <footer class="footer-adm">
     <div class="direccion">
