--- a/carreras/diplomados/adultomayor.html
+++ b/carreras/diplomados/adultomayor.html
@@ -42,8 +42,8 @@
             <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
             <li><a href="/carreras/maestrias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
             <li><a href="/carreras/maestrias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
-            <li><a href="/carreras/maestrias/contabilidad.html">Tecnología Superior Universitaria en Contabilidad </a></li>
-            <li><a href="/formacion-continua.html">Administración de Empresas e Inteligencia de Negocios</a></li>   
+            <li><a href="/carreras/maestrias/calidadProductividad.html">Tecnología Superior en Calidad y Productividad</a></li>
+            <li><a href="formacioncontinua.html">Tecnología Superior Universitaria en Contabilidad</a></li>   
           </ul>
         </li>
         <li class="dropdown"><a href="/formacion-continua.html">FORMACIÓN CONTINUA<i class="bi bi-chevron-down"></i></a>
@@ -190,9 +190,16 @@
     </div>
   </div>
 
-  <div class="boton-informacion contenedor">
-    <a href="/carreras/diplomados/documento/1 Diplomado en Cuidados del Adulto Mayor.pdf">MALLA</a>
+  <div class="btn-malla_fin">
+    <div class="boton-informacion contenedor">
+      <a href="/carreras/diplomados/documento/1 Diplomado en Cuidados del Adulto Mayor.pdf" target="_blank">MALLA</a>
+    </div>
+  
+    <div class="boton-fin contenedor">
+      <a href="/assets/images/img-carreras/costoDiplomado.png" target="_blank">FINANCIAMIENTO</a>
+    </div>
   </div>
+  
 
   <div class="banner-adm">
     <h3>PROCESO DE ADMISIÓN</h3>
