--- a/pregrado.html
+++ b/pregrado.html
@@ -42,8 +42,8 @@
             <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
             <li><a href="/carreras/maestrias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
             <li><a href="/carreras/maestrias/admempresas.html">Administración de Empresas e Inteligencia de Negocios</a></li>
-            <li><a href="/carreras/maestrias/contabilidad.html">Tecnología Superior Universitaria en Contabilidad </a></li>
-            <li><a href="formacion-continua.html">Administración de Empresas e Inteligencia de Negocios</a></li>   
+            <li><a href="/carreras/maestrias/calidadProductividad.html">Tecnología Superior en Calidad y Productividad</a></li>
+            <li><a href="formacioncontinua.html">Tecnología Superior Universitaria en Contabilidad</a></li>   
           </ul>
         </li>
         <li class="dropdown"><a href="formacion-continua.html">FORMACIÓN CONTINUA<i class="bi bi-chevron-down"></i></a>
