Se actualiza la pagina principal

--- a/admisiones-iub.html
+++ b/admisiones-iub.html
@@ -37,7 +37,7 @@
        
         <nav class="sub-menu text-center contenedor navbar">
          <!--<button onclick="window.location.href = 'index.html';" type="submit"><img src="assets/images/home.png" alt="iconoInicio"></button>-->
-         <a href="index.html"><img src="assets/images/home.png" alt="iconoInicio"></a>
+         <a href="index.html"><img src="assets/images/home1.png" alt="iconoInicio"></a>
           <li class="dropdown"><a href="oferta-academica.html">PREGRADO<i class="bi bi-chevron-down"></i></a>
             <ul> 
               <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
