--- a/eventos/evento1.html
+++ b/eventos/evento1.html
@@ -92,32 +92,38 @@
         según evidencia el CACES que brindó una conferencia 
       </h1>
       <div class="titulo-imagen">
-        <img src="/assets/images/eventos/Caces.png" alt="CACES">
-        <p>“Se aplican cambios y acciones de mejoras en las IES”: Dra. Ximena Vallejo, titular del CACES.</p>
+        <img src="/assets/images/eventos/evento1.png" alt="Bolivariano">
+        <p>En el Campus del Bolivariano continua la oferta académica de vanguardia.</p>
       </div>
       
     </div>
 
     <div class="contenido-evento">
       <p>
-        <span>(RESUMEN)</span>
-        La característica participativa fue determinante en el transcurso de la ponencia del CACES, que repasó las técnicas de evaluación bajo responsabilidad de las Instituciones de Educación Superior (IES). La sustentación se inscribe en la visita reciente al Campus del Universitario Bolivariano.
+        Dentro del Área de las Ciencias Administrativas, nuestro Instituto Superior Universitario Bolivariano de Loja (Ecuador) presenta la nueva oferta académica: Calidad y Productividad en línea para el periodo octubre 2024-marzo 2025.
+        La carrera 100% virtual tiene una difusión especial no solo en la Región 7 del Ecuador, sino a escala nacional y mundial, siendo una alternativa para la juventud que se proyecta con recientes tendencias para un desempeño ocupacional de vanguardia previa tutoría de especialistas extranjeros.
+
       </p>
 
       <p>
-        La cultura de la mejora continua resaltó la doctora Ph. D. Ximena Córdova Vallejo, máxima autoridad del Consejo de Aseguramiento de la Calidad de la Educación Superior (CACES), durante su conferencia sobre Procesos de Evaluación y Acreditación en el Sistema de Educación Superior del Ecuador.
-        Su ponencia ante la comunidad académica del Instituto Superior Universitario Bolivariano de la ciudad de Loja se efectuó dentro de la agenda de la Presidencia de ese organismo nacional que se desarrolló el 27 de junio, de manera interactiva en especial con los profesionales en formación y docentes investigadores.
+        <span>Prospecto</span>  
+        La nueva carrera tiene titulación de tercer nivel, modalidad no presencial. Al término del cumplimiento de los créditos respectivos se entregarán títulos correspondientes a Tecnología Superior Universitaria, siendo la duración cinco ciclos.
+        La malla curricular incluye las prácticas de aplicación de aprendizaje, aprendizaje autónomo, prácticas de servicio comunitario, prácticas laborales, entre otras horas académicas.
+        Los títulos que emite el Universitario Bolivariano son reconocidos por la Secretaría de Educación Superior, Ciencia, Tecnología e Innovación (Senescyt), previa aprobación del Consejo de Educación Superior (CES).
 
-        Respaldo
-        El factor preponderante del apoyo de las Direcciones de las IES a estos programas de autoevaluación y evaluación permitirá incrementar los índices de calidad de la educación superior, argumentó la doctora Ximena Córdova al plantear el caso del Universitario Bolivariano con un efectivo cumplimiento del cronograma establecido.
-        Con la definición de metas claras para el objetivo integral de cada organismo resulta más confiable el trabajo evaluativo permanente y el seguimiento no necesariamente con fines de acreditación por parte de las IES del Ecuador, sino para innovar la excelencia educacional.
 
       </p>
       <p>
-        <span>MEMORIA</span>
-        El CACES determina los modelos de evaluación que tienen fines de acreditación. La autoevaluación y mejora continua integran estos sistemas aplicados a las IES del Ecuador.
-
+        <span>Aval</span>        
+        El CES mediante resolución RPS-SO-25 No.415-2024 publicó el visto bueno para la carrera en referencia, bajo modalidad online y luego de haber cumplido los requerimientos de este organismo nacional.
+        Los interesados pueden ampliar información con el equipo de promotoras de matrículas en Administración central del Campus del Instituto Bolivariano, calles José Antonio Eguiguren 156-33 y Bolívar o mediante llamada telefónica al 072 575245 o al celular 0939374133; correo electrónico info@tbolivariano.edu.ec.
       </p>
+      <div class="notirecuadros">
+        <p>
+          <span>ENFOQUE / DÍGITO (Hora 32) / EL DATO (Ecotel Press)</span>
+          2 años y medio tiene como duración la carrera innovadora del Área de las Ciencias Administrativas.
+        </p>
+      </div>
     </div>
 
     <div class="footer-evento">
