--- a/formacion-continua.html
+++ b/formacion-continua.html
@@ -36,7 +36,7 @@
     <div class="menu">
               
         <nav class="sub-menu text-center contenedor navbar">
-          <a href="index.html"><img src="assets/images/home.png" alt="iconoInicio"></a>
+          <a href="index.html"><img src="assets/images/home1.png" alt="iconoInicio"></a>
           <li class="dropdown"><a href="oferta-academica.html">PREGRADO<i class="bi bi-chevron-down"></i></a>
             <ul> 
               <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
