--- a/pregrado.html
+++ b/pregrado.html
@@ -36,7 +36,7 @@
     <div class="menu">
       
       <nav class="sub-menu text-center contenedor navbar">
-        <button onclick="window.location.href = 'index.html';" type="submit"><img src="assets/images/home.png" alt="iconoInicio"></button>
+        <button onclick="window.location.href = 'index.html';" type="submit"><img src="assets/images/home1.png" alt="iconoInicio"></button>
         <li class="dropdown"><a href="pregrado.html">PREGRADO<i class="bi bi-chevron-down"></i></a>
           <ul> 
             <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
