Se actualiza la pagina de oferta academica

--- a/oferta-academica.html
+++ b/oferta-academica.html
@@ -105,7 +105,7 @@
       <input type="checkbox" id="check" class="menu_checkbox">
       <ul class="menu-mobile-items">
         <li><a href="index.html">Inicio</a></li>
-        <li class="dropdown"><a href="ofertaAcademica.html">PREGRADO<i class="bi bi-chevron-down"></i></a>
+        <li class="dropdown"><a href="ofertaAcademica.html">CARRERAS UNIVERSITARIAS<i class="bi bi-chevron-down"></i></a>
           <ul> 
             <li><a href="/carreras/maestrias/salud.html">Administración de Sistemas de Salud</a></li>
             <li><a href="/carreras/maestrias/tecnologia.html">Administración tecnológica e innovación estratégica</a></li> 
@@ -116,11 +116,11 @@
         </li>
         <!--<li class="dropdwon"><a href="formacionContinua.html">FORMACION CONTINUA</a>-->
         <li class="dropdown"><a href="formacion-continua.html">FORMACIÓN CONTINUA<i class="bi bi-chevron-down"></i></a>
-          <ul> 
+          <!--<ul> 
             <li><a href="/carreras/diplomados/cuidadospacientecritico.html">Cuidados de Enfermería en el Paciente Crítico</a></li>
             <li><a href="/carreras/diplomados/instrumentacion.html">Instrumentación Quirúrgica</a></li> 
             <li><a href="/carreras/diplomados/adultomayor.html">Cuidados del Adulto Mayor</a></li>   
-          </ul>
+          </ul>-->
         </li>
         <li><a href="matriculate-online.php">Matriculate Online</a></li>
       </ul>  
@@ -134,9 +134,10 @@
       <div class="form-texto">
 
         <div class="texto-esp text-center">
-          <h2>PREGRADO</h2>
-          <p>Disponemos 5 carreras en línea en Tecnología Superior Universitaria, con docentes Internacionales y nacionales que te guiarán en este apasionante mundo de la educación online.</p>
-          <h3 class="text-center">LO QUE SUEÑAS, LO QUE QUIERES SER</h3>
+          <h2>CARRERAS UNIVERSITARIAS</h2>
+          <p>Disponemos 7 carreras en línea en Tecnología Superior Universitaria, con docentes Internacionales y nacionales que te guiarán en este apasionante mundo de la educación online.</p>
+          <h3 class="text-center">LO QUE SUEÑAS</h3>
+          <h3 class="text-center">LO QUE QUIERES SER</h3>
         </div>
   
         <div class="reg-informacion">
@@ -197,7 +198,7 @@
 
       <div class="tarjeta-contenido_central">
         <div>
-          <img src="/assets/images/img-carreras/dos.png" alt="salud">
+          <img src="/assets/images/img-carreras/asalud.PNG" alt="salud">
         </div>
         <div class="tarjeta-contenido_texto">
           <h2>Administración de Sistemas de Salud</h2>
@@ -211,7 +212,7 @@
 
       <div class="tarjeta-contenido_central">
         <div>
-          <img src="/assets/images/img-carreras/tres.png" alt="">
+          <img src="/assets/images/img-carreras/atecnologia.PNG" alt="tecnologia">
         </div>
         <div class="tarjeta-contenido_texto">
           <h2>Administración tecnológica e innovación estratégica</h2>
@@ -224,7 +225,7 @@
 
       <div class="tarjeta-contenido_central">
         <div>
-          <img src="/assets/images/img-carreras/uno.png" alt="">
+          <img src="/assets/images/img-carreras/aempresas.PNG" alt="empresas">
         </div>
         <div class="tarjeta-contenido_texto">
           <h2>Administración de Empresas e Inteligencia de Negocios</h2>
@@ -237,7 +238,7 @@
       
       <div class="tarjeta-contenido_central">
         <div>
-          <img src="/assets/images/img-carreras/cuatro.png" alt="">
+          <img src="/assets/images/img-carreras/calidadproductividad.PNG" alt="calidad">
         </div>
         <div class="tarjeta-contenido_texto">
           <h2>Tecnología Superior en Calidad y Productividad</h2>
@@ -249,7 +250,7 @@
       </div>
       <div class="tarjeta-contenido_central">
         <div>
-          <img src="/assets/images/img-carreras/uno.png" alt="">
+          <img src="/assets/images/img-carreras/contabilidad.PNG" alt="contabilidad">
         </div>
         <div class="tarjeta-contenido_texto">
           <h2>Tecnología Superior Universitaria en Contabilidad</h2>
@@ -257,6 +258,30 @@
         </div>
         <div class="enlace-carrera">
           <a href="/carreras/maestrias/contabilidad.html">Conoce Más</a>
+        </div>
+      </div>
+      <div class="tarjeta-contenido_central">
+        <div>
+          <img src="/assets/images/img-carreras/" alt="EDInicial">
+        </div>
+        <div class="tarjeta-contenido_texto">
+          <h2>Educación Inicial</h2>
+          <p>Descubre una oferta de clase mundial sin salir de tu país. Nuestros programas te abrirán las puertas al mundo y te harán marcar la diferencia. Te invitamos a trascender, innovar y a ser un líder referencial.</p>
+        </div>
+        <div class="enlace-carrera">
+          <a href="/oferta-academica.html">Conoce Más</a>
+        </div>
+      </div>
+      <div class="tarjeta-contenido_central">
+        <div>
+          <img src="/assets/images/img-carreras/" alt="EDbasica">
+        </div>
+        <div class="tarjeta-contenido_texto">
+          <h2>Educación Básica</h2>
+          <p>Descubre una oferta de clase mundial sin salir de tu país. Nuestros programas te abrirán las puertas al mundo y te harán marcar la diferencia. Te invitamos a trascender, innovar y a ser un líder referencial.</p>
+        </div>
+        <div class="enlace-carrera">
+          <a href="/oferta-academica.html">Conoce Más</a>
         </div>
       </div>
 
